Debbugging still in process
